swagger type fix
