# cmd/apk/main.go
@@ -1,17 +1,3 @@
-// @title           Student and Calendar API
-// @version         1.0
-// @description     API для управления студентами и событиями в календаре.
-// @termsOfService  http://example.com/terms/
-
-// @contact.name   API Support
-// @contact.url   --
-// @contact.email  --
-
-// @license.name  MIT
-// @license.url   https://opensource.org/licenses/MIT
-
-// @host      localhost:8080
-// @BasePath  /api
 package main
 
 import (
@@ -34,6 +20,21 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+// @title           Student and Calendar API
+// @version         1.0
+// @description     API для управления студентами и событиями в календаре.
+// @termsOfService  http://example.com/terms/
+
+// @contact.name   API Support
+// @contact.url   --
+// @contact.email  --
+
+// @license.name  MIT
+// @license.url   https://opensource.org/licenses/MIT
+
+// @host      localhost:8080
+// @BasePath  /api
 
 func main() {
 	//init config: env
@@ -92,70 +93,14 @@ func main() {
 	// Group for working with student-related routes
 	studentGroup := r.Group("/api/students")
 	{
-		// ListStudentsHandler возвращает список студентов.
-		// @Summary      Получить список студентов
-		// @Description  Возвращает список всех студентов.
-		// @Tags         students
-		// @Accept       json
-		// @Produce      json
-		// @Success      200  {array}  postgres.Student
-		// @Failure      500  {object}  gin.H
-		// @Router       /api/students [get]
 
 		studentGroup.GET("/", handler.ListStudentsHandler(*queries, log))
 
-		// CreateStudentHandler создает нового студента.
-		// @Summary      Создать студента
-		// @Description  Добавляет нового студента в базу данных.
-		// @Tags         students
-		// @Accept       json
-		// @Produce      json
-		// @Param        student  body  postgres.CreateStudentParams  true  "Данные студента"
-		// @Success      201  {object}  postgres.Student
-		// @Failure      400  {object}  gin.H
-		// @Failure      500  {object}  gin.H
-		// @Router       /api/students [post]
-
 		studentGroup.POST("/", handler.CreateStudentHandler(*queries, log))
-		// DeleteStudentByIdHandler удаляет студента по ID.
-		// @Summary      Удалить студента
-		// @Description  Удаляет студента из базы данных по его ID.
-		// @Tags         students
-		// @Accept       json
-		// @Produce      json
-		// @Param        id   path      int  true  "ID студента"
-		// @Success      204
-		// @Failure      400  {object}  gin.H
-		// @Failure      404  {object}  gin.H
-		// @Router       /api/students/{id} [delete]
 
 		studentGroup.DELETE("/:id", handler.DeleteStudentByIdHandler(*queries, log))
 
-		// GetStudentByIdHandler возвращает информацию о студенте по ID.
-		// @Summary      Получить информацию о студенте
-		// @Description  Возвращает полную информацию о студенте по его ID.
-		// @Tags         students
-		// @Accept       json
-		// @Produce      json
-		// @Param        id   path      int  true  "ID студента"
-		// @Success      200  {object}  postgres.Student
-		// @Failure      400  {object}  gin.H
-		// @Failure      404  {object}  gin.H
-		// @Router       /api/students/{id} [get]
-
 		studentGroup.GET("/:id", handler.GetStudentByIdHandler(*queries, log))
-		// UpdateStudentByIdHandler обновляет информацию о студенте по ID.
-		// @Summary      Обновить информацию о студенте
-		// @Description  Позволяет обновить определенные данные студента по его ID.
-		// @Tags         students
-		// @Accept       json
-		// @Produce      json
-		// @Param        id      path      int                          true  "ID студента"
-		// @Param        student body      postgres.UpdateStudentParams true  "Данные для обновления"
-		// @Success      200     {object}  postgres.Student
-		// @Failure      400     {object}  gin.H
-		// @Failure      404     {object}  gin.H
-		// @Router       /api/students/{id} [patch]
 
 		studentGroup.PATCH("/:id", handler.UpdateStudentByIdHandler(*queries, log))
 	}
@@ -163,17 +108,6 @@ func main() {
 	// Group for working with calendar-related routes
 	calendarGroup := r.Group("/api/calendar")
 	{
-		// DayListHandler возвращает список событий на день.
-		// @Summary      Получить список событий
-		// @Description  Возвращает события календаря на указанный день.
-		// @Tags         calendar
-		// @Accept       json
-		// @Produce      json
-		// @Param        date  query  string  true  "Дата в формате YYYY-MM-DD"
-		// @Success      200  {array}  postgres.Event
-		// @Failure      400  {object}  gin.H
-		// @Failure      500  {object}  gin.H
-		// @Router       /api/calendar [get]
 
 		calendarGroup.GET("/", handler.DayListHandler(*queries, log))
 	}
